cluster/apps/media/sabnzbd/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sabnzbd.${SECRET_DOMAIN}`)
    kind: Rule
    priority: 10
    services:
    - name: sabnzbd
      kind: Service
    middlewares:
    - name: rfc1918
  tls:
    secretName: "${SECRET_DOMAIN/./-}"
